<resources>
    <string name="app_name">Pet4All</string>

    <string name="page_title_login">Login</string>
    <string name="page_title_profile">Profile</string>
    <string name="page_title_sign_up">Sign Up</string>

    <!-- String Related To NavBar -->
    <string name="navbar_profile">Perfil</string>
    <string name="navbar_search">Procurar</string>
    <!-- <string name="navbar_articles">Artigos</string>-->
    <string name="navbar_dropdown">Dropdown</string>

    <!-- Strings related to login -->
    <string name="no_account">No account yet? Create one</string>
    <string name="lb_username">Username</string>
    <string name="lb_password">Password</string>
    <string name="btn_login">Login</string>

    <!-- Strings related to Sign up -->
    <string name="btn_sign_up">Sign Up</string>
    <string name="lb_full_name">Name</string>
    <string name="lb_email">Email</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>

    <string name="title_activity_login_profile">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_login">Sign in</string>
    <string name="user_since_profile">Utilizador desde</string>
    <string name="user_last_login">Ultima vez online</string>
    <string name="date_user_creation">Data de criação</string>
    <string name="date_last_login">Ultima data de login</string>
    <string name="user_location">Localidade Placeholder , Pais Placeholder</string>
    <string name="user_about">Sobre mim…</string>
    <string name="user_name">Nome Placeholder</string>
    <string name="button_send_message">Enviar Mensagem</string>
    <string name="button_edit_profile">Editar Perfil</string>
    <string name="button_report_abuse">Reportar Abuso</string>
    <string name="textview_email_register_input">Insira o seu e-mail</string>
    <string name="textview_name_register_input">Insira o seu nome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtRegisterStatic">Registar Utilizador</string>
    <string name="txtRegister1Static">Registar Associação</string>
    <string name="txtRegisterUserDesc1">Placeholder text</string>
    <string name="txtRegisterUserDesc2">Placeholder text</string>
    <string name="txtRegisterUserDesc3">Placeholder text</string>
    <string name="txtRegisterKennelDesc1">Placeholder text</string>
    <string name="txtRegisterKennelDesc2">Placeholder text</string>
    <string name="txtRegisterKennelDesc3">Placeholder text</string>
    <string name="txtReportFragmentStaticTop">Denunciar</string>
    <string name="reportSpinnerPromptDesc">Descrição</string>
    <string name="reportSpinnerPromptDesc1">Descrição da Denuncia</string>
    <string name="reportSpinnerPromptSubmit">Submeter</string>
    <string name="searchMenuTopbartxt">Procurar animal</string>
    <string name="reportSpinnerPrompt">Razão da Denuncia</string>
    <string name="txtGenderStatic">Género</string>
    <string name="txtDistanceStatic">Distância</string>
    <string name="txtAgeStatic">Idade</string>
    <string name="txtTypeStatic">Tipo do Animal</string>
    <string name="btnSearchtext">Procurar</string>
    <string name="btnShowAll">Mostrar Todos</string>
    <string-array name="genderDropdown">
        <item>Mostrar tudo</item>
        <item>Macho</item>
        <item>Fêmea</item>
    </string-array>
    <string-array name="genderaddDropdown">
        <item>Macho</item>
        <item>Fêmea</item>
    </string-array>
    <string-array name="neuteredDropdown">
        <item>Não</item>
        <item>Sim</item>
    </string-array>
    <string-array name="typeDropdown">
        <item>Todos</item>
        <item>Cão</item>
        <item>Gato</item>
    </string-array>
    <string-array name="sizeDropdown">
        <item>Muito Pequeno</item>
        <item>Pequeno</item>
        <item>Médio</item>
        <item>Grande</item>
        <item>Muito Grande</item>
    </string-array>
    <string-array name="energyDropdown">
        <item>Baixa</item>
        <item>Média</item>
        <item>Alta</item>
    </string-array>
    <string-array name="coatDropdown">
        <item>Curta</item>
        <item>Comprida</item>
        <item>Sem</item>
    </string-array>
    <string-array name="ageDropdown">
        <item>Todos</item>
        <item>Até 1 ano</item>
        <item>Até 3 anos</item>
        <item>Até 5 anos</item>
        <item>Até 7 anos</item>
        <item>Até 9 anos</item>
    </string-array>
    <string-array name="distanceDropdown">
        <item>Todos</item>
        <item>Até 10 kms</item>
        <item>Até 30 kms</item>
        <item>Até 50 kms</item>
        <item>Até 70 kms</item>
        <item>Até 90 kms</item>
    </string-array>
    <string-array name="reportDropdown">
        <item>Todos</item>
        <item>Imagem Inapropriada</item>
        <item>Perfil Inapropriado</item>
        <item>Abuso da Plataforma</item>
    </string-array>
    <string name="title_activity_animal_message">AnimalMessageActivity</string>
</resources>
