<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_background_primary"
            tools:ignore="contentDescription" />

        <TextView
            android:id="@+id/page_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#55212121"
            android:gravity="center"
            android:text="@string/page_title_sign_up"
            android:textColor="@color/color_text_light"
            android:textSize="@dimen/font_size_title" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_horizontal"
        android:elevation="4dp"
        android:background="@drawable/rectangle"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Username Input -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_mg"
                    android:layout_marginBottom="@dimen/input_mg">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lb_username"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
                <!-- End Username Input -->


                <!-- Name Input -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_mg"
                    android:layout_marginBottom="@dimen/input_mg">

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lb_full_name"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>
                <!-- End Name Input -->


                <!-- Email Input -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_mg"
                    android:layout_marginBottom="@dimen/input_mg">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lb_email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>
                <!-- End Email Input -->

                <!-- Password Input -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_mg"
                    android:layout_marginBottom="@dimen/input_mg">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lb_password"
                        android:inputType="textVisiblePassword" />
                </android.support.design.widget.TextInputLayout>
                <!-- End Password Input -->

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/btn_mg"
                    android:layout_marginBottom="@dimen/btn_mg"
                    android:padding="12dp"
                    android:text="@string/btn_sign_up"
                    style="@style/btn_warning"
                    android:textSize="@dimen/btn_font_size" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <fragment
        android:id="@id/navbarFragment"
        android:name="pt.amsi.ipleiria.pet4all.Fragments.NavbarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
