<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/bg_2"
                tools:ignore="contentDescription"/>

            <TextView
                android:id="@+id/page_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="#aaffffff"
                android:textColor="@color/color_text"
                android:textSize="@dimen/font_size_title"
                android:text="@string/page_title_login"
                 />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@color/color_secundary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_horizontal"
        android:background="@color/color_primary"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Email Input -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_mg"
                    android:layout_marginBottom="@dimen/input_mg">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lb_username"
                        android:inputType="text"
                        android:textColor="@color/color_text"
                        android:textColorHint="@color/color_text"/>
                </android.support.design.widget.TextInputLayout>
                <!-- End Email Input -->

                <!-- Password Input -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_mg"
                    android:layout_marginBottom="@dimen/input_mg">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lb_password"
                        android:inputType="textPassword"
                        android:textColor="@color/color_text"
                        android:textColorHint="@color/color_text"
                        />
                </android.support.design.widget.TextInputLayout>
                <!-- End Password Input -->

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/btn_mg"
                    android:layout_marginBottom="@dimen/btn_mg"
                    android:padding="12dp"
                    android:background="@color/color_secundary"
                    android:textColor="@color/color_text_light"
                    android:text="@string/btn_login"
                    android:textSize="@dimen/btn_font_size"/>

                <TextView
                    android:id="@+id/link_signup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="btnRegisterRedirect"
                    android:text="@string/no_account"
                    android:textColor="@color/color_secundary"
                    android:textSize="14sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <fragment
        android:id="@id/navbarFragment"
        android:name="pt.amsi.ipleiria.pet4all.Fragments.NavbarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#bb333333"
        android:padding="120dp"
        android:visibility="invisible" />

</RelativeLayout>